<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#7850ff">

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/preu"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFD5FDC1"
        android:textSize="12dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/estalvis"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFD5FDC1"
        android:textSize="12dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/termini"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFD5FDC1"
        android:textSize="12dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/euribor"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFD5FDC1"
        android:textSize="12dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/diferencial"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFD5FDC1"
        android:textSize="12dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="12dp"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/button"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:nestedScrollingEnabled="false"
        android:textSize="20dp"
        android:textColor="#0a03fd"
        android:shadowColor="#2c28ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mes"
        android:id="@+id/textView6"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#8eff76" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total"
        android:id="@+id/textView7"
        android:textColor="#8eff76"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView8"
        android:textColor="#8eff76"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView9"
        android:textColor="#8eff76"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff" />



</RelativeLayout>
